unresponsive screen on mobile device bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -55,10 +55,3 @@ button:hover {
   transform: translateY(2px);
   background-color: rgb(30, 45, 94);
 }
-
-* {
-  /* disable the browser’s “delay” before starting a touch drag */
-  touch-action: none;
-  /* opt into dragging for WebKit/U-WebKit browsers */
-  -webkit-user-drag: element;
-}
